documentation/2.2.0/manual/Home.md
<!-- translated -->
<!-- # Play 2.2 documentation -->
# Play 2.2 ドキュメント

<!-- > Play is a high-productivity Java and Scala web application framework that integrates the components and APIs you need for modern web application development. 
>
> Play is based on a lightweight, stateless, web-friendly architecture and features predictable and minimal resource consumption (CPU, memory, threads) for highly-scalable applications thanks to its reactive model, based on Iteratee IO. -->
>Play は、現代の web アプリケーション開発に必要なコンポーネント及び API を統合した生産性の高い Java と Scala の web アプリケーションフレームワークです。
>
> Play の特徴は、ライトウェイト、ステートレス、web フレンドリーなアーキテクチャであること、機能予測のしやすさです。また、Iteratee IO をベースにしたリアクティブモデルのおかげで、スケーラブルなアプリケーションでも CPU、メモリ、スレッドなどのリソース消費が最小限になっています。

<!-- - [[What's new in Play 2.2?|Highlights22]]
- [[What's new in Play 2.1?|Highlights21]]
- [[Play 2.2 Migration Guide|Migration22]] -->
- [[Play 2.2 の変更点|Highlights22]]
- [[Play 2.1 の変更点|Highlights21]]
- [[Play 2.2 移行ガイド|Migration22]]

<!-- ## Getting started -->
## はじめに

<!-- 1. [[Installing Play|Installing]]
1. [[Creating a new application|NewApplication]]
1. [[Anatomy of a Play application|Anatomy]]
1. [[Using the Play console|PlayConsole ]]
1. [[Setting up your preferred IDE|IDE]]
1. [[Sample applications|Samples]]
1. [Security policy](http://www.playframework.com/code/security) -->
1. [[Play のインストール|Installing]]
1. [[新規アプリケーションを作成する|NewApplication]]
1. [[Play アプリケーションの構造|Anatomy]]
1. [[Play コンソールを使う|PlayConsole ]]
1. [[好きな IDE で開発する|IDE]]
1. [[サンプルアプリケーション|Samples]]
1. [セキュリティポリシー](http://www.playframework-ja.org/code/security)

<!-- ## Working with Play -->
## Play で開発する

<!-- 1. [[Play for Scala developers|ScalaHome]]
1. [[Play for Java developers|JavaHome]] -->
1. [[Scala 開発者のための Play|ScalaHome]]
1. [[Java 開発者のための Play|JavaHome]]

<!-- ## Detailed topics -->
## 詳細なトピック

<!-- 1. [[The Build system|Build]]
    1. [[About sbt settings|SBTSettings]]
    1. [[Manage application dependencies|SBTDependencies]]
    1. [[Working with sub-projects|SBTSubProjects]]
1. [[Working with public assets|Assets]]
    1. [[Using CoffeeScript|AssetsCoffeeScript]]
    1. [[Using LESS CSS|AssetsLess]]
    1. [[Using Google Closure Compiler|AssetsGoogleClosureCompiler]]
    1. [[Using RequireJS|RequireJS-support]]
1. [[Working with the in-memory H2 database|Developing-with-the-H2-Database]]
1. [[Managing database evolutions|Evolutions]]
1. [[Configuration file syntax and features|Configuration]]
    1. [[Configuring the JDBC connection pool|SettingsJDBC]]
    1. [[Configuring Play's thread pools|ThreadPools]]
    1. [[Configuring logging|SettingsLogger]]
1. [[Deploying your application|Production]]
    1. [[Creating a standalone package|ProductionDist]]
    1. [[Additional configuration|ProductionConfiguration]]
    1. [[Set up a front end HTTP server|HTTPServer]]
    1. [[Configuring HTTPS|ConfiguringHttps]]
    1. [[Deploying to a cloud service|DeployingCloud]] -->
1. [[ビルドシステム|Build]]
    1. [[sbt 設定について|SBTSettings]]
    1. [[ライブラリ依存性の管理|SBTDependencies]]
    1. [[サブプロジェクトで作業する|SBTSubProjects]]
1. [[公開アセットを使う|Assets]]
    1. [[CoffeeScript を使う|AssetsCoffeeScript]]
    1. [[LESS CSS を使う|AssetsLess]]
    1. [[Google Closure Compiler を使う|AssetsGoogleClosureCompiler]]
    1. [[RequireJS を使う|RequireJS-support]]
1. [[H2 インメモリデータベースと使う|Developing-with-the-H2-Database]]
1. [[Evolutions でデータベースを管理する|Evolutions]]
1. [[設定ファイルのシンタックスと機能|Configuration]]
    1. [[JDBC コネクションプールの設定|SettingsJDBC]]
    1. [[Play スレッドプールの設定|ThreadPools]]
    1. [[ログの設定|SettingsLogger]]
1. [[アプリケーションのデプロイ|Production]]
    1. [[スタンドアローンパッケージを作成する|ProductionDist]]
    1. [[追加設定|ProductionConfiguration]]
    1. [[フロントエンド HTTP サーバの設定|HTTPServer]]
    1. [[HTTPS の設定|ConfiguringHttps]]
    1. [[Cloud Foundry へデプロイする|Deploying-CloudFoundry]]

<!-- ## Additional documentation -->
## その他のドキュメント

<!-- 1. [Scala](http://docs.scala-lang.org/)
1. [Akka](http://akka.io/docs/)
1. [sbt](http://www.scala-sbt.org/learn.html)
1. [Configuration](https://github.com/typesafehub/config)
1. [Logback](http://logback.qos.ch/documentation.html) -->
1. [Scala](http://docs.scala-lang.org/)
1. [Akka](http://akka.io/docs/)
1. [sbt](http://www.scala-sbt.org/learn.html)
1. [Configuration](https://github.com/typesafehub/config)
1. [Logback](http://logback.qos.ch/documentation.html)

<!-- ## Hacking Play -->
## Play を Hack する

<!-- 1. [[Building Play from source|BuildingFromSource]]
1. [[3rd Party Tooling|ThirdPartyTools]]
1. [[Repositories|Repositories]]
1. [[Issue tracker|Issues]]
1. [[Contributor guidelines|Guidelines]] -->
1. [[ソースから Play をビルドする|BuildingFromSource]]
1. [[サードパーティツール|ThirdPartyTools]]
1. [[リポジトリ|Repositories]]
1. [[課題トラッカ|Issues]]
1. [[貢献者ガイドライン|Guidelines]]

<!-- ## About Play -->
## Play について

<!-- 1. [[Play Philosophy|Philosophy]]
1. [[Play User Groups|PlayUserGroups]] -->
1. [[Play の哲学|Philosophy]]
1. [[Play ユーザーグループ|PlayUserGroups]]

<!-- ## Modules and plugins -->
## モジュールとプラグイン

<!-- 1. [[Temporary modules directory|Modules]] -->
1. [[一時的なモジュールディレクトリ | Modules]]
